[gd_scene load_steps=14 format=2]

[ext_resource path="res://multiplayer_modules/scenes/lobby.gd" type="Script" id=1]
[ext_resource path="res://img_source/menu_image_background.jpg" type="Texture" id=2]
[ext_resource path="res://font_source/normal_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://img_source/back_button_press.png" type="Texture" id=4]
[ext_resource path="res://img_source/back_button.png" type="Texture" id=5]
[ext_resource path="res://img_source/Knight.png" type="Texture" id=6]
[ext_resource path="res://multiplayer_modules/UI/buttongroup_character.tres" type="ButtonGroup" id=7]
[ext_resource path="res://img_source/Seer.png" type="Texture" id=8]
[ext_resource path="res://img_source/Bodyguard.png" type="Texture" id=9]
[ext_resource path="res://img_source/Witch.png" type="Texture" id=10]
[ext_resource path="res://img_source/Hunter.png" type="Texture" id=11]
[ext_resource path="res://img_source/Player.png" type="Texture" id=12]
[ext_resource path="res://icon.png" type="Texture" id=13]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 959.0
margin_bottom = 542.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="Panel" parent="."]
visible = false
self_modulate = Color( 0, 0.784314, 1, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -464.0
margin_top = -198.0
margin_right = 456.0
margin_bottom = 234.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Players"]
margin_left = 160.0
margin_top = 8.0
margin_right = 295.0
margin_bottom = 62.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "Awaiting Players..."

[node name="Start" type="Button" parent="Players"]
margin_left = 144.0
margin_top = 376.0
margin_right = 312.0
margin_bottom = 417.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "START!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="ItemList" parent="Players"]
margin_left = 16.0
margin_top = 48.0
margin_right = 440.0
margin_bottom = 284.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="HostIP" type="RichTextLabel" parent="Players"]
margin_left = 8.0
margin_top = 288.0
margin_right = 448.0
margin_bottom = 364.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Players"]
margin_left = 472.0
margin_top = 48.0
margin_right = 898.0
margin_bottom = 408.0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Players/GridContainer"]
margin_right = 148.0
margin_bottom = 82.0
toggle_mode = true
group = ExtResource( 7 )
text = "Knight"
icon = ExtResource( 6 )

[node name="Button2" type="Button" parent="Players/GridContainer"]
margin_left = 152.0
margin_right = 274.0
margin_bottom = 82.0
toggle_mode = true
group = ExtResource( 7 )
text = "Hunter"
icon = ExtResource( 11 )

[node name="Button3" type="Button" parent="Players/GridContainer"]
margin_left = 278.0
margin_right = 423.0
margin_bottom = 82.0
toggle_mode = true
group = ExtResource( 7 )
text = "Bodyguard"
icon = ExtResource( 9 )

[node name="Button4" type="Button" parent="Players/GridContainer"]
margin_top = 86.0
margin_right = 148.0
margin_bottom = 168.0
toggle_mode = true
group = ExtResource( 7 )
text = "OldVillager"
icon = ExtResource( 12 )

[node name="Button5" type="Button" parent="Players/GridContainer"]
margin_left = 152.0
margin_top = 86.0
margin_right = 274.0
margin_bottom = 168.0
toggle_mode = true
group = ExtResource( 7 )
text = "Seer"
icon = ExtResource( 8 )

[node name="Button6" type="Button" parent="Players/GridContainer"]
margin_left = 278.0
margin_top = 86.0
margin_right = 423.0
margin_bottom = 168.0
toggle_mode = true
group = ExtResource( 7 )
text = "Witch"
icon = ExtResource( 10 )

[node name="Button7" type="Button" parent="Players/GridContainer"]
margin_top = 172.0
margin_right = 148.0
margin_bottom = 242.0
toggle_mode = true
pressed = true
group = ExtResource( 7 )
text = "RANDOM"
icon = ExtResource( 13 )

[node name="Label2" type="Label" parent="Players"]
margin_left = 632.0
margin_top = 8.0
margin_right = 744.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "Select character"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="Panel" parent="."]
self_modulate = Color( 1, 0.431373, 0.431373, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = -198.0
margin_right = 184.0
margin_bottom = 93.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Connect"]
margin_left = 23.0
margin_top = 13.0
margin_right = 106.0
margin_bottom = 44.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "Name:"

[node name="Name" type="LineEdit" parent="Connect"]
margin_left = 23.0
margin_top = 45.0
margin_right = 343.0
margin_bottom = 69.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "The Warrior"

[node name="IPLabel" type="Label" parent="Connect"]
margin_left = 23.0
margin_top = 77.0
margin_right = 65.0
margin_bottom = 108.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "IP:"

[node name="IPAddress" type="LineEdit" parent="Connect"]
margin_left = 23.0
margin_top = 109.0
margin_right = 343.0
margin_bottom = 133.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"

[node name="Host" type="Button" parent="Connect"]
margin_left = 23.0
margin_top = 197.0
margin_right = 151.0
margin_bottom = 253.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="Connect"]
margin_left = 215.0
margin_top = 197.0
margin_right = 343.0
margin_bottom = 253.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "Join"

[node name="ErrorLabel" type="Label" parent="Connect"]
margin_left = 19.0
margin_top = 151.0
margin_right = 261.0
margin_bottom = 165.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 55.0
margin_bottom = 58.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 8, 8 )
scale = Vector2( 0.59375, 0.4375 )
normal = ExtResource( 5 )
pressed = ExtResource( 4 )
[connection signal="pressed" from="Players/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Connect/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
